Wed Mar 31 00:33:28 EST 1999  Matt Wilson  <msw@gimp.org>

	* commands.[ch]: changed callbacks invoked by ItemFactories to
	the the correct parameters.  This fixes the following problems:
	- tool election via hotkeys and right click menu selection
	- reshow last filter repeating last filter
	- possible new file dialog problems

Mon Mar 29 11:33:38 PST 1999 Manish Singh <yosh@gimp.org>

	* Made 1.0.3 release

	* Added various #include files to some plug-ins to make them
	compile cleanly

	* configure.in: Makefile in docs/white-paper too

	* README
	* NEWS: updated

Sun Mar 28 14:38:53 PST 1999 Manish Singh <yosh@gimp.org>

	* updated to libtool 1.2f

	* configure.in: require gtk 1.2

Sat Mar 27 01:13:42 EST 1999  Matt Wilson  <msw@gimp.org>

	* app/app_procs.c: removed the idle function from the
	splash screen, added code that services the event
	queue.  This reduces flicker in the splash screen.
	(backport from 1.1)

	* app/brushes.c: s/gpointer/gconstpointer for hash table
	functions (backport from 1.1)

	* app/fileops.c: added #include <stdlib.h> to get
	prototype for strtol()

	* app/gdisplay.c: added a check to see if we have a gdisplay
	hash table set up before we go looking for the gdisplay
	for this toplevel widget. (backport from 1.1)

	* app/interface.c: added a bound check for progress_update
	(backport from 1.1)

	* app/main.c: added a cast to make g_set-message_handler happy
	(backport from 1.1)

	* app/patterns.c: s/gpointer/gconstpointer for hash table
	functions (backport from 1.1)

	* app/plug_in.c: added bounds check for progress bar update

	* app/procedural_db.c: s/gpointer/gconstpointer for hash table
	functions, changed to using g_str_equal for comparison
	(backport from 1.1)

	* plug-ins/MapObject/mapobject_ui.c: now uses the right widget
	for adjustment callbacks (backport from 1.1 branch)

	* plug-ins/dbbrowser/dbbrowser_utils.c: fixed the clist of
	db functions so that the scrollbar shows, added viewports