@@ -1,6 +1,10 @@
+Wed Mar 31 01:17:38 EST 1999  Matt Wilson  <msw@gimp.org>
+
+	* app/colormaps.c: fix for 8 bit displays
+
 Wed Mar 31 00:33:28 EST 1999  Matt Wilson  <msw@gimp.org>
 
-	* commands.[ch]: changed callbacks invoked by ItemFactories to
+	* app/commands.[ch]: changed callbacks invoked by ItemFactories to
 	the the correct parameters.  This fixes the following problems:
 	- tool election via hotkeys and right click menu selection
 	- reshow last filter repeating last filter
